# SEM3_OOP_CPP

./: CMakeLists.txt  justfile  main.cpp
.github/: README.md
.github/workflows/: test.yml
examples/: bank.cpp  lists.cpp  result.cpp  students.cpp
lib/: list.h  list.test.cpp  utils.h
